--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 421 -
+[2008/01/03] Aeomin - Updated VARS for getvar
+-
+
 - Rev 420 -
 [2008/01/03] Aeomin - Added Tsusai's Lua_toLongWord to LuaCoreRoutines.
 [2008/01/03] Aeomin - Modified Compass to use Lua_toLongWord instead crappy long way..
