--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,13 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 423 -
+[2008/01/06] RaX - Added Attack speed calculations. Also fixed bug in eventthread
+ that caused a crash dealing with eventlist index, now checks index and gets a pointer
+ to the contents of that list index, rather than refinding the pointer for each
+ operation.
+-
+
 - Rev 422 -
 [2008/01/04] Tsusai - Various case sensitive changes committed for linux compiling.
 -
