--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 426 -
+[2008/01/14] RaX - Moved Attack from TCharacter to TBeing.
+-
+
 - Rev 425 -
 [2008/01/10] RaX - Fixed following and attacking, modified both TCharacter and TAttackEvent.
 -
