--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 431 -
+[2008/01/30] RaX - Fixed bug in last commit, changing TThread to TIdThread was
+ trickier than I thought. Apparently IdThread's freeonterminate doesn't work.
+-
+
 - Rev 430 -
 [2008/01/29] RaX - More random cleanup, commented, renamed, and organized stuff
  relating to the Commclient. Added an event (OnReconnect) which fires when the
