--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 439 -
+[2008/02/18] RaX - Fixed database yml source, had an = where there should have
+ been a :
+-
+
 - Rev 438 -
 [2008/02/18] RaX - Quick fixes for lazarus compatibility on database code. Added
  lazarus project file (you'll still need to add search paths for indy and zeoslib).
