- Rev 440 - [2008/02/18] Aeomin - Updated 3rdParty.txt -

--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,10 @@ Developers & Contributers
 --------------------------------------------------------------------------------
 
 - Rev 440 -
+[2008/02/18] Aeomin - Updated 3rdParty.txt
+-
+
+- Rev 440 -
 [2008/02/18] Aeomin - Added Sqlite database, and tweaks..
 however, i'm unable to test it due to helios crash or something... weird..
 -
